<resources>
    <string name="app_name">GSI Task Manager</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="assign">Assign</string>
    <string name="task_tittle">Task Tittle</string>
    <string name="unknown">unknown</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="defaultDate">10 de january de 1970  10:05 pm</string>
    <string name="project">Project</string>
    <string name="inbox">Inbox</string>
    <string name="info_provide_their_role">To begin you should select their role</string>
    <string name="manager">Manager</string>
    <string name="manager_team">Team Manager</string>
    <string name="member_team">Team Member</string>
    <string name="add_profile">Add Profile</string>
    <string name="name">Name</string>
    <string name="name_last">Name and Last Name</string>
    <string name="add">Add</string>
    <string name="occupation">Occupation</string>
    <string name="home">Home</string>
    <string name="listAll">All</string>
    <string name="completed">Completed</string>
    <string name="noCompleted">Incomplete</string>
    <string name="task_detail">Task detail</string>
    <string name="tittle">Tittle</string>
    <string name="finish">Finish</string>
    <string name="begin">Begin</string>
    <string name="change">Change</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="state_undefined">State undefined</string>
    <string name="cancel">Cancel</string>
    <string name="type_profile">Type profile</string>
    <string name="space_id">Space Name</string>
    <string name="select_to_assign_task">Select an user to assign task</string>
    <string name="local_accounts">Local Accounts</string>
    <string name="assign_task">Assign task</string>
    <string name="delete">Delete</string>
    <string name="delete_from_db">Deleted from database</string>
</resources>