<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_role_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/info_provide_their_role"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/ly_manager_choose"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/state_draw_btn2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ly_manager_team_choose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_role_info"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ly_manager_team_choose"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/state_draw_btn2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ly_member_team_choose"
        app:layout_constraintStart_toEndOf="@+id/ly_manager_choose"
        app:layout_constraintTop_toBottomOf="@+id/tv_role_info"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager_team" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_member_team_choose"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/state_draw_btn2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ly_manager_team_choose"
        app:layout_constraintTop_toBottomOf="@+id/tv_role_info"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_team" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>